@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-03-06T01:04:13Z",
+  "timestamp" : "2024-03-06T08:19:44Z",
   "count_outdated" : 193921,
   "uniques_outdated" : 1962,
-  "count" : 198113,
-  "uniques" : 1990,
+  "count" : 198225,
+  "uniques" : 1992,
   "clones" : [
     {
       "timestamp": "2024-02-21T00:00:00Z",
-      "count": 225,
+      "count": 133,
       "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 75, 300 ],
+      "count_decinc": [ 167, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -127,6 +127,15 @@
       "count": 300,
       "count_minmax": [ 112, 300 ],
       "count_decinc": [ 0, 300 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-03-06T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
