@@ -1,10 +1,10 @@
 {
-  "count": 4117,
+  "count": 4137,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2024-02-21T00:00:00Z",
-      "count": 225,
+      "count": 133,
       "uniques": 2
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-03-05T00:00:00Z",
       "count": 300,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-03-06T00:00:00Z",
+      "count": 112,
       "uniques": 2
     }
   ]
